<resources>
    <string name="app_name"> Birthday Wish Maker </string>
    <string name="downloading_stickers_pack">Downloading stickers pack</string>
    <string name="change_photo">Change photo</string>
    <string name="reflect">Reflect</string>
    <string name="rotater">Rotate</string>
    <string name="stickers_lay">STICKERS</string>
    <string name="rotate_icon">Rotate Icon</string>
    <string name="check_this_if_you_don_t_know_year">Check this if you don\'t know year</string>
    <string name="delete_custom_text">Are you sure you want to delete this image?</string>
    <string name="no_click">No</string>
    <string name="yes_click">Yes</string>
    <string name="back_man_style_image">Back from Edit Page </string>
    <string name="creations_name">Birthday Video Maker</string>
    <string name="delete">Delete</string>
    <string name="expand_image">expand_image</string>
    <string name="save">save</string>
    <string name="save1">SAVE</string>
    <string name="download">Download</string>
    <string name="creation">There are no saved images in your gallery…</string>
    <string name="effects_icon">Effects Icon</string>
    <string name="ad_is_loading">Ad is loading</string>
    <string name="setwall_click">Set Wallpaper</string>
    <string name="delete_image">Delete Icon</string>
    <string name="shae_image">Share Image</string>
    <string name="cancel_dialog">Cancel Dialog</string>
    <string name="wallpaper_description">Man Photo Editor Settings</string>
    <string name="color_icon">Color Icon</string>
    <string name="sticker_icon">Sticker Icon</string>
    <string name="text_icon">Text Icon</string>
    <string name="delete_icon">Delete Icon</string>
    <string name="setwall_icon">SetWall Icon</string>
    <string name="facebook_icon">Facebook Icon</string>
    <string name="whatsup_icon">Whatsup Icon</string>
    <string name="instagram_icon">Instagram Icon</string>
    <string name="back_page_icon">Back page Icon</string>
    <string name="home_page_icon">Home Page Icon</string>
    <string name="back_to_home">Back to home</string>
    <string name="ok_icon">Ok Icon</string>
    <string name="saved_image">Saved Image</string>
    <string name="balloon_icon">Balloon Icon</string>
    <string name="gift_icon">Gift Icon</string>
    <string name="bubble_icon">Bubble Icon</string>
    <string name="flies_icon">Flies Icon</string>
    <string name="candy_icon">Candy Icon</string>
    <string name="rain_icon">Rain Icon</string>
    <string name="love_icon">Love Icon</string>
    <string name="hidelayoutbutton">hidelayoutbutton</string>
    <string name="cropping">Crop Your Image</string>
    <string name="close_icon">Close Icon</string>
    <string name="imgfontcontrol">Imgfontcontrol</string>
    <string name="txt_colors">Colors</string>
    <string name="txt_fonts">Fonts</string>
    <string name="imgcolorcontrol">imgcolorcontrol</string>
    <string name="add_text_here">Enter Text Here</string>
    <string name="gallery_icon">Gallery icon</string>
    <string name="recycler_color_icon">Recycler Color Icon</string>
    <string name="color_icon2">Color Icon2</string>
    <string name="color_icon3">Color Icon3</string>
    <string name="backgrounds_icon">Backgrounds Icon</string>
    <string name="gradient_icon">Gradient Icon</string>
    <string name="share_title">Share</string>
    <string name="share_text_prefix">sharing an interesting app for you : </string>
    <string name="try_our_best_apps_for_free">Try Best Apps for Free (Ads)</string>
    <string name="navigation_header_image">Navigation header image</string>
    <string name="image_in_seperator_layout">image in seperator layout</string>
    <string name="shadowtop">Shadowtop</string>
    <string name="add_text">Add Text</string>
    <string name="messages">Wishes</string>
    <string name="favourites">Favourites</string>
    <string name="help">Help</string>
    <string name="birthday_messages">Birthday Messages</string>
    <string name="stickers">Stickers</string>
    <string name="back_from_wallpaper_settings">Back from Wallpaper Settings</string>
    <string name="back_from_creations">Back from Creations</string>
    <string name="cancel_crop_image">Cancel crop image</string>
    <string name="rotate_cropimage">Rotate cropimage</string>
    <string name="done_cropimage">Done cropimage</string>
    <string name="quotes_click">Quotes click</string>
    <string name="bgs_click">Bgs click</string>
    <string name="text_click">Text click</string>
    <string name="messages_click">Messages click</string>
    <string name="stickers_icon">Stickers Icon</string>
    <string name="fonts_click">Fonts click</string>
    <string name="bgs_done_click">Bgs done click</string>
    <string name="normal_bgs_click">Normal bgs click</string>
    <string name="gradient_bgs_click">Gradient bgs click</string>
    <string name="color_bgs_click">Color bgs click</string>
    <string name="text_color_click">Text color click</string>
    <string name="back_from_messages">Back from messages</string>
    <string name="attitude_click">Attitude click</string>
    <string name="friends_click">Friends click</string>
    <string name="frontarrow_icon">Frontarrow icon</string>
    <string name="messages_icon">Messages icon</string>
    <string name="family_icon">Family icon</string>
    <string name="friendship_icon">Friendship icon</string>
    <string name="birthday_icon">Birthday icon</string>
    <string name="heart_icon">Heart icon</string>
    <string name="motivation_icon">Motivation Icon</string>
    <string name="back_from_share_page">Back from share page</string>
    <string name="share_click">Share click</string>
    <string name="back_from_artwords">Back from artwords</string>
    <string name="gallery_click">Gallery click</string>
    <string name="shadow">Shadow</string>
    <string name="ChooseGreetings">Choose Greetings</string>
    <string name="ChooseGradient">Choose Gradient</string>
    <string name="ChooseColor">Choose Color</string>
    <string name="ChooseFonts">Choose Fonts</string>
    <string name="birthday_greeting_card">Birthday Greeting Cards</string>
    <string name="editing_page">Editing Page</string>
    <string name="shapes">shapes</string>
    <string name="transparency">transparency</string>
    <string name="create_birthday_remainder">Create Birthday Remainder</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="profile_image">Profile Image</string>
    <string name="birthday_reminders">Birthday Reminders</string>
    <string name="enable_disable_reminders">Enable / Disable reminders</string>
    <string name="reminder_date">Reminder date</string>
    <string name="reminder_sound">Reminder sound</string>
    <string name="play_sound">Play sound</string>
    <string name="reminder_vibrate">Reminder vibrate</string>
    <string name="activate_vibration">Activate vibration</string>
    <string name="app_notification">App Notification</string>
    <string name="_3_days_notification">3 days notification</string>
    <string name="reminder_time">Reminder Time</string>
    <string name="how_many_years">How many years</string>
    <string name="happy_birthday">Happy Birthday</string>
    <string name="send_birthday_frames">Send Birthday Frames</string>
    <string name="send_birthday_cakes">Send Birthday Cakes</string>
    <string name="send_birthday_quotes">Send Birthday Quotes</string>
    <string name="send_birthday_video">Send Birthday Video</string>
    <string name="dailog_header">Dialog header</string>
    <string name="are_you_sure_you_want_to_delete_this_image">Are you sure you want to delete this image?</string>
    <string name="are_you_sure_delete_these">Are You Sure Delete these.?</string>
    <string name="you_will_not_able_to_recover_this_again">You will not able to recover this again</string>
    <string name="no_cancel_del">No, cancel del</string>
    <string name="yes_delete_it">Yes, delete it!</string>
    <string name="save_edit_button">save edit button</string>
    <string name="save_birthday">Save Details</string>
    <string name="birthday_reminder">Birthday Reminder</string>
    <string name="no_space_error">Your SD card is full, there is not enough space to save this file.</string>
    <string name="bad_extension_error">Sorry, Mp3Cutter is not yet able to edit files of type</string>
    <string name="no_extension_error">Sorry, Mp3Cutter can\'t edit a file if it doesn\'t have an extension like .mp3 or .wav</string>
    <string name="success_contact_ringtone">Successfully assigned ringtone to:</string>
    <string name="end_marker">End marker</string>
    <string name="stop">Stop</string>
    <string name="start_label">Start:</string>
    <string name="end_label">End:</string>
    <string name="time_seconds">seconds</string>
    <string name="LightWeightVideoMAkerwithmusicrefresh">Light Weight Video Maker with music refresh</string>
    <string name="Photoslideshowzoomin">Photo slide show zoom in</string>
    <string name="Photoslideshowwithmusicrew">Photo slide show with music rew</string>
    <string name="VideoMakerwithhotosplay">Video Maker with go to play"</string>
    <string name="BestVideoMakerforward">Best Video Maker forward</string>
    <string name="progress_dialog_loading">Loading…</string>
    <string name="progress_dialog_saving">Saving…</string>
    <string name="write_error">Error writing file</string>
    <string name="read_error">Error reading file</string>
    <string name="set_as_phone_ringtone">Set As Phone Ringtone</string>
    <string name="set_as_alarm_ringtone">set As Alaram Ring tone</string>
    <string name="play_error">Unable to play this media file</string>
    <string name="alert_title_success">Success</string>
    <string name="alert_title_failure">Error</string>
    <string name="alert_ok_button">OK</string>
    <string name="cancel">Cancel</string>
    <string name="start_marker">Start marker</string>
    <string name="no_unique_filename">Unable to find unique filename</string>
    <string name="record_error">Error recording audio</string>
    <string name="play_button">Play Button</string>
    <string name="frame_image">Frame image</string>
    <string name="shadow_image">Shadow Image</string>
    <string name="video_preview">Video Preview</string>
    <string name="trim_video">Trim Audio</string>
    <string name="arrange_photos">Arrange Photos</string>
    <string name="edit_image">Edit Image</string>
    <string name="effects_image">Effects Image</string>
    <string name="brightness">Brightness</string>
    <string name="indicator">Indicator</string>
    <string name="brightness_seekbar">Brightness seekbar</string>
    <string name="contrast">Contrast</string>
    <string name="contrast_seekbar">Contrast Seekbar</string>
    <string name="saturation">Saturation</string>
    <string name="saturation_seekbar">Saturation Seekbar</string>
    <string name="tint">Tint</string>
    <string name="tint_content">Tint Seekbar</string>
    <string name="flip_horizontal_content">Flip Horizontal</string>
    <string name="horizontl_flip">Horizontal flip</string>
    <string name="flip_vertical_content">Vertical Flip</string>
    <string name="vertical_flip">Vertical Flip</string>
    <string name="crop">Crop</string>
    <string name="rotate">Rotate</string>
    <string name="ok">OK</string>
    <string name="please_wait">Please wait...</string>
    <string name="done">Done</string>
    <string name="back_from_crop_page">Back from crop page</string>
    <string name="cropimageview">cropimageview</string>
    <string name="no">No</string>
    <string name="ad">Ad</string>
    <string name="no_videos">No videos</string>
    <string name="allow_storage_permission">Allow Storage permission</string>
    <string name="yes">Yes</string>
    <string name="are_you_sure_want_to_exit">Are you sure, want to exit ?</string>
</resources>