<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:drawable/dialog_holo_light_frame"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/are_you_sure_delete_these"
            android:textColor="@android:color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/you_will_not_able_to_recover_this_again"
            android:textSize="14dp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/no"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:background="@color/app_theme_color"
                android:text="@string/no_cancel_del" />

            <Button
                android:id="@+id/yes"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:background="@color/app_theme_color"
                android:text="@string/yes_delete_it"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>