<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent_black">

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="10dp"
        android:background="@drawable/dialog_bg_delete_white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/delete_dar_pink_bg">

            <TextView
                android:id="@+id/txt_dia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:gravity="center"
                android:text="@string/are_you_sure_want_to_exit"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:background="@color/white"
                android:gravity="top"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btn_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="4dp"
                    android:layout_marginRight="7dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/no_click"
                    android:background="@drawable/dialog_no_bg"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:text="@string/no"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btn_yes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="4dp"
                    android:layout_marginLeft="25dp"
                    android:layout_weight="1"
                    android:background="@drawable/delete_dialog_white_bg"
                    android:gravity="center_horizontal"
                    android:padding="10dp"
                    android:contentDescription="@string/yes_click"
                    android:text="@string/yes"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>