<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/viewpager_bg_color"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/shadowutop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_down"
        android:contentDescription="@string/shadowtop"
        android:minHeight="6.0dip" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true">

        <androidx.cardview.widget.CardView
            android:id="@+id/ad_card"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            app:cardElevation="3dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <FrameLayout
                    android:id="@+id/fl_adplaceholder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/adattrid"
                    android:layout_width="20dp"
                    android:layout_height="15dp"
                    android:layout_margin="5dp"
                    android:background="@drawable/nativead"
                    android:gravity="center"
                    android:text="@string/ad"
                    android:textColor="@color/White"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/adload"
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_margin="25dp"
                    android:gravity="center"
                    android:text="@string/ad_is_loading"
                    android:textColor="#000" />
            </RelativeLayout>
        </androidx.cardview.widget.CardView>


    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />
    <TextView
        android:id="@+id/textempty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/no_videos"
        android:textAlignment="center"
        android:textAppearance="@style/customfontstyle"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="invisible" />

    <ImageView
        android:id="@+id/videoviewempty"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:src="@drawable/novideos"
        android:visibility="gone" />
    <Button
        android:id="@+id/allow_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        android:text="@string/allow_storage_permission"/>
</RelativeLayout>